@@ -1,3 +1,8 @@
+2001-12-28  Patrick Burke  <takhisisii@yahoo.com.au>
+	* usecode/ucxt/*: Fixed bug/TODO where ucxt wasn't building the list of
+	goto targets from all the opcodes with goto offsets (it was only
+	handling jmp/jne).
+
 2001-12-27  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gamemap.cc,gamemap.h (public): Added terrain-list modification
